fix: open the published Granite 4.1 3B marker (template resolution + registry conflict) (#158)
* fix(runtime): resolve qualification prompt templates to runtime chat templates

The Granite 4.1 3B Q4_K_M qualification records granite-documents, the
RAG harness's documents envelope. ModelJarRuntime and
ModelJarActivatedRuntime passed the recorded id straight to
ChatTemplate.parse, which knows only runtime ids, so openRuntime on the
published marker failed with "uses an unsupported chat template:
granite-documents" after the backend had loaded the weights (measured
against ModelJars 0.1.42 from Maven Central).

QualifiedChatTemplates maps harness-only variants explicitly
(granite-documents -> granite; the turns are identical and only the
documents system block differs, asserted against the Models renderers)
and otherwise defers to ChatTemplate.parse. Unknown ids still fail; there
is no raw fallback.

A test over the bundled RAG and tool qualification registries now fails
the build if any qualification names a template the runtime cannot
render.

* fix(catalog): advance RAG qualification generatedAt past the published Granite marker

The Granite 4.1 3B Q4_K_M marker (4.1.0-q4_k_m.2) was built while
catalog/qualifications.json declared targetQualifiedModels=33. Commit
6e8a006 corrected the value to 25 but left generatedAt at
2026-09-16T09:54:54Z. ModelRagQualificationRegistry refuses differing
catalog metadata at one generation instant, so every ModelJars release
from 0.1.40 to 0.1.42 fails to build its classpath registry when the
published Granite marker is present:

  ModelJarException: Conflicting RAG qualification catalog metadata at
  the same generation instant

(measured against Maven Central 0.1.40, 0.1.41 and 0.1.42). This fires
before the chat-template failure and blocks every model in such an
application, not only Granite.

generatedAt now records when the manifest metadata last changed
(6e8a006, 2026-09-16T15:34:54Z), so the bundled catalog supersedes the
mar